[gd_scene load_steps=6 format=2]

[ext_resource path="res://signals/SignalPost.gd" type="Script" id=1]
[ext_resource path="res://signals/distant_signal/Signal.tscn" type="PackedScene" id=2]
[ext_resource path="res://signals/home_signal/Signal.tscn" type="PackedScene" id=3]
[ext_resource path="res://signals/starter_signal/Signal.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 1.5, 2 )

[node name="Spatial" type="Spatial"]
transform = Transform( -4.10887e-08, 0, -0.94, 0, 1.01, 0, 0.94, 0, -4.10887e-08, 0, 0, 0 )
script = ExtResource( 1 )
direction = 0
signal_state = 3

[node name="Signal" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0101339, 1, -0.0185497 )
signal_state = 3

[node name="Signal2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
visible = false

[node name="Signal3" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
visible = false
signal_state = 3

[node name="Area" type="Area" parent="." groups=["signal"]]
collision_layer = 4
collision_mask = 15

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, -6.39488e-14, 0, 0.999999, 0, 6.39488e-14, 0, 1, 4.8, 0, 2 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
